Actions
Bug #5307
closedAD join with lmauth_level=2 fails
Start date:
2014-11-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
With lmauth_level=2 the SMB sever is supposed to use NTLMv1.
Instead, we don't see any connection attempt to the AD server.
Updated by Gordon Ross over 7 years ago
NTLMv1 is not allowed by SMB_AT_DEFAULT, which is used for both the default ct_authflags and the default ct_minauth. Separate those two defaults (and take out of the I/F header, where they never really belonged).
Updated by Electric Monk over 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit fd75ca8de430ee0ba5ce650efee0ac0b85ed43e9
commit fd75ca8de430ee0ba5ce650efee0ac0b85ed43e9 Author: Gordon Ross <gwr@nexenta.com> Date: 2014-11-12T19:27:49.000Z 5307 AD join with lmauth_level=2 fails Reviewed by: Boris Protopopov <boris.protopopov@nexenta.com> Reviewed by: Alek Pinchuk <pinchuk.alek@gmail.com> Reviewed by: Albert Lee <trisk@nexenta.com> Reviewed by: Thomas Keiser <thomas.keiser@nexenta.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions