5307 AD join with lmauth_level=2 fails Reviewed by: Boris Protopopov <boris.protopopov@nexenta.com> Reviewed by: Alek Pinchuk <pinchuk.alek@gmail.com> Reviewed by: Albert Lee <trisk@nexenta.com> Reviewed by: Thomas Keiser <thomas.keiser@nexenta.com> Approved by: Dan McDonald <danmcd@omniti.com>